Previous and Next Frame of Video

--- a/simple-player.html
+++ b/simple-player.html
@@ -24,7 +24,9 @@
 	<button id='play-pause-button' class='play' title='play' onclick='togglePlayPause()' type="button">Play</button>
 	<button id='stop-button' class='stop' title='stop' onclick='stopPlayer();'>Stop</button>
 	<span id='current-time'></span>/<span id='duration-time'></span>
-
+	<br>
+	<button id="previous-frame" title="previous frame" type="button"><|Frame</button>
+	<button id="next-frame" title="next frame" type="button">Frame|></button>
 </div>
     
 
