Add simple Submit Button
Chage Submit Button status based on Add Segment Button

--- a/simple-editor-jq/simple-player-editor-jq.html
+++ b/simple-editor-jq/simple-player-editor-jq.html
@@ -37,6 +37,8 @@
 	<button id="startEndSegmentButton" type="button">Start Segment</button>
 	<button id="addChapter" type="button" disabled="true">Add chapter</button>
 
+	<button id="submitButton" type="button">Submit</button>
+
 
 
 
