Insert Time into Chapter

--- a/simple-editor-jq/simple-player-editor-jq.html
+++ b/simple-editor-jq/simple-player-editor-jq.html
@@ -54,9 +54,9 @@
 					<input type="text" name="segmentTitle" id="segmentTitle"><br><br>
 					
 					<label for="startTime">Start</label>
-					<input id="startTime" name="startTime" size="10" />
+					<input name="startTime" size="10" />
 					<label for="endTime">End</label>
-					<input id="EndTime" name="endTime" size="10" />
+					<input name="endTime" size="10" />
 					<br><br>
 					<textarea <textarea rows="6" cols="50" name="segmentDescription"></textarea>
 					<br><br>
@@ -76,11 +76,9 @@
 	<template id="chapterTemplate">
 		<div id="chapter" class="chapter">
 			<label for="chapterTitle">Chapter Title</label>
-			<input type="text" name="chapterTitle" id="chapterTitle"><br><br>
-			<label for="startTime">Start</label>
-			<input id="startTime" name="startTime" size="10" />
-			<label for="EndTime">End</label>
-			<input id="EndTime" name="EndTime" size="10" />
+			<input type="text" name="chapterTitle"><br><br>
+			<label for="timePiece">Time Piece</label>
+			<input name="timePiece" size="10" />
 			<br>
 		</div>
 	</template>
