Update Next Button Name and Functions

--- a/start-process/index.html
+++ b/start-process/index.html
@@ -37,13 +37,13 @@
     <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
       <a id="cateStageBtn" href="#" class="btn btn-primary stage-button active" role="button">Category</a>
       <br><br>
-      <a id="tempStageBtn" href="#" class="btn btn-primary stage-button disabled" role="button" aria-disabled="true">Template</a>
+      <a id="tempStageBtn" href="#" class="btn btn-primary stage-button" role="button">Template</a>
       <br><br>
-      <a id="colorStageBtn" href="#" class="btn btn-primary stage-button disabled" role="button" aria-disabled="true">Color</a>
+      <a id="colorStageBtn" href="#" class="btn btn-primary stage-button" role="button">Color</a>
       <br><br>
-      <a id="featStageBtn" href="#" class="btn btn-primary stage-button disabled" role="button" aria-disabled="true">Feature</a>
+      <a id="featStageBtn" href="#" class="btn btn-primary stage-button" role="button">Feature</a>
       <br><br>
-      <a id="saveStageBtn" href="#" class="btn btn-primary stage-button disabled" role="button" aria-disabled="true">Save</a>
+      <a id="saveStageBtn" href="#" class="btn btn-primary stage-button" role="button">Save</a>
       <br><br>
 
       <!-- <button id="cateStageBtn" type="button" class="btn btn-secondary stage-button">Category</button> -->
@@ -143,10 +143,10 @@
           Template Control Panels
         </div>
       </div>
-      <div id="tempNextBtn" class="row next-btn-section nopadding" style="border: 1px solid green">
+      <div class="row next-btn-section nopadding" style="border: 1px solid green">
         <div class="my-col" style="border: 1px solid yellow">
           <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
-            <button type="button" class="btn btn-secondary">Next</button>
+            <button id="tempNextBtn"  type="button" class="btn btn-success" style="width:35%">Choose Template</button>
           </td></tr></tbody></table>
         </div>
       </div>
@@ -175,10 +175,10 @@
           Color Control Panels
         </div>
       </div>
-      <div id="colorNextBtn" class="row next-btn-section nopadding" style="border: 1px solid green">
+      <div class="row next-btn-section nopadding" style="border: 1px solid green">
         <div class="my-col" style="border: 1px solid yellow">
-          <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
-            <button type="button" class="btn btn-secondary">Next</button>
+          <table id="colorNextBtn" class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
+            <button type="button" class="btn btn-success" style="width:35%">Choose Color Scheme</button>
           </td></tr></tbody></table>
         </div>
       </div>
@@ -208,10 +208,10 @@
           Feature Control Panels
         </div>
       </div>
-      <div id="featNextBtn" class="row next-btn-section nopadding" style="border: 1px solid green">
+      <div class="row next-btn-section nopadding" style="border: 1px solid green">
         <div class="my-col" style="border: 1px solid yellow">
           <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
-            <button type="button" class="btn btn-secondary">Next</button>
+            <button id="featNextBtn" type="button" class="btn btn-success" style="width:35%">Select Features</button>
           </td></tr></tbody></table>
         </div>
       </div>
@@ -243,7 +243,7 @@
       <div id="saveNextBtn" class="row next-btn-section nopadding" style="border: 1px solid green">
         <div class="my-col" style="border: 1px solid yellow">
           <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
-            <button type="button" class="btn btn-secondary">Next</button>
+            <button type="button" class="btn btn-success" style="width:35%">Sign Up & Save</button>
           </td></tr></tbody></table>
         </div>
       </div>
