Add Control Buttons

--- a/start-process/index.html
+++ b/start-process/index.html
@@ -108,7 +108,34 @@
       </div>
       <div id="cateControl" class="row control-section nopadding" style="border: 1px solid red">
         <div class="my-col" style="border: 1px solid blue">
-          Categoty Control Panels
+
+<div id="cateSectionSection" class="row my-col text-center nopadding" style="border: 1px solid green">
+  <div class="col-1"></div>
+  <div class="col my-col" style="border: 1px solid yellow">
+    <table class="my-table" style="border: 1px solid black"><tbody><tr><td>
+      <button type="button" class="btn btn-primary">Primary</button>
+    </td></tr></tbody></table>
+  </div>
+  <div class="col">
+    <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
+      <button type="button" class="btn btn-primary">Primary</button>
+    </td></tr></tbody></table>
+  </div>
+  <div class="col">
+    <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
+      <button type="button" class="btn btn-primary">Primary</button>
+    </td></tr></tbody></table>
+  </div>
+  <div class="col">
+    <table class="my-table" style="width: 100%; border: 1px solid black"><tbody><tr><td>
+      <button type="button" class="btn btn-primary">Primary</button>
+    </td></tr></tbody></table>
+  </div>
+  <div class="col-1"></div>
+</div>
+
+
+
         </div>
       </div>
       <div class="row next-btn-section nopadding" style="border: 1px solid green">
