--- a/start-process/start-process.html
+++ b/start-process/start-process.html
@@ -38,7 +38,7 @@
 <div class="col text-left">
 
 </div>
-<div class="rol-10 text-center">
+<div class="col-10 text-center">
 
   <table class="my-table"><tbody><tr><td class="align-middle">
     <h4 class="modal-title nomargin" id="myModalLabel">Create your App</h4>
@@ -59,17 +59,18 @@
 
 
 
-      <div class="modal-body">
-        
-<!-- The Main Start Process Panel -->
+      <div class="modal-body" style="display: flex;">
+
+          <div class="container-fluid nomargin" style=" flex: auto">
 
 
 
-<div id="containerSection" class="row main-section text-center nopadding">
 
-qwe
-</div>
+            <div id="containerSection" class="row no-gutters">
+              123
 
+            </div>
+        </div>
 
 
 
